--- a/livecd-utils/src/livecd-install.pl.in
+++ b/livecd-utils/src/livecd-install.pl.in
@@ -19,7 +19,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install.pl.in,v 1.2 2004/01/06 10:18:10 jaco Exp $
+# $Id: livecd-install.pl.in,v 1.3 2004/05/04 22:29:00 tom_kelly33 Exp $
 #
 
 package main;
@@ -28,6 +28,7 @@ use lib qw(/usr/lib/libDrakX);
 use common;
 
 use Qt;
+# use Qt::debug qw|calls autoload verbose|;
 use fMain;
 
 MAIN: {
