--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.125 2004/04/19 15:47:44 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.126 2004/06/12 14:50:49 tom_kelly33 Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -771,6 +771,12 @@ sub hwdetect_getnetwork {
 			hwdetect_loadmod('unknown', $probed_vendor, $probed_desc);
 			print_hash($card) if ($debug);
 		}
+		## Turn off IPV6
+		if ($kernel26) {
+			modules::add_alias("net-pf-10 off");
+			print "modules::add_alias('net-pf-10 off')\n" if ($debug);
+			print "IPV6 turned off \n";
+		}
 	}
 	system("rm -rf /etc/rc.d/rc?.d/*network") unless (scalar(@probed_cards) || $probe);
 	set_progress();
@@ -1116,10 +1122,10 @@ sub hwdetect_getdisks {
 				}
 				$all_devs{$dev}->{type}   = "auto";
 				if ($disk->{media_type} =~ /^cdrom/) {
-					$all_devs{$dev}->{opt} = $fsopt_fullro.",".$fsopt_noauto;
+					$all_devs{$dev}->{opt} = $fsopt_fullro;  ##### .",".$fsopt_noauto;
 				}
 				else {
-					$all_devs{$dev}->{opt} = $fsopt_fullrw.",".$fsopt_noauto;
+					$all_devs{$dev}->{opt} = $fsopt_fullrw;  ##### .",".$fsopt_noauto;
 				}
 				$all_devs{$dev}->{extopt} = $extopts;
 				$all_devs{$dev}->{supermount} = 1;
@@ -1333,9 +1339,10 @@ sub hwdetect_writedisks {
 		print FSTAB "\n### ".getStr('disk_fstab_info')." $SCRIPT_NAME v$SCRIPT_VER\n";
 		open INFO, '>', "$prefix/etc/livecd/hwdetect/mounts.cfg";
 		print FSTAB "\n# USB\nnone\t/proc/bus/usb\tusbdevfs\tdefaults\t0 0\n" if ($usbfstab);
+		print FSTAB "\n# PTS\nnone\t/dev/pts\tdevpts\tmode=0620\t0 0\n";
+
 		if ($kernel26) {
 		   print FSTAB "\n# SYSFS\nnone\t/sys sysfs\tdefaults\t0 0\n";
-		   print FSTAB "\n# PTS\nnone\t/dev/pts\tdevpts\tmode=0620\t0 0\n";
 		   print FSTAB "\n# PROC\nnone\t/proc proc\tdefaults\t0 0\n";
 		   print FSTAB "\n# TMPFS\nnone\t/tmp tmpfs\tdefaults\t0 0\n";
                 } 
