--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -3,6 +3,7 @@
 # LiveCD hardware detection script
 #
 # Copyright (C) 2002-2004, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -21,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.126 2004/06/12 14:50:49 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.127 2004/07/14 14:49:02 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
