--- a/livecd-utils/src/livecd-install-lang.pm.in
+++ b/livecd-utils/src/livecd-install-lang.pm.in
@@ -2,6 +2,7 @@
 # LiveCD install script language strings
 #
 # Copyright (C) 2004, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -19,7 +20,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install-lang.pm.in,v 1.16 2004/06/05 13:11:29 tom_kelly33 Exp $
+# $Id: livecd-install-lang.pm.in,v 1.17 2004/07/14 14:58:03 jaco Exp $
 #
 
 package fMain;
