--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.127 2004/07/14 14:49:02 jaco Exp $
+# $Id: hwdetect.in,v 1.128 2004/08/20 16:18:48 tom_kelly33 Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1096,8 +1096,8 @@ sub hwdetect_getdisks {
 	}
 
 	### do all the cd, floppy stuff
-	my $numfloppy = 0;
-	my $numcd = 0;
+	my $numfloppy = ""; # floppy, floppy1
+	my $numcd = ""; # cdrom, cdrom1
 	my $numwin = 'c';
 	foreach my $disk (@{$all_hdds->{raw_hds}}) {
 		if ($debug) {
