--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.25 2004/07/14 14:49:02 jaco Exp $
+# $Id: rc.sysinit.in,v 1.26 2004/08/20 16:18:48 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -360,7 +360,7 @@ setuproot() {
 		d=${d#$MNTLIVECD/}
 		if [ -d $MNTLIVECD/$d ]; then
 			case $d in
-				dev|proc|sys|mnt|tmp|udev)
+				dev|proc|sys|mnt|tmp|udev|initrd)
 					;;
 				etc)
 					setupdir_etc
