--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.113 2004/07/15 06:55:06 jaco Exp $
+# $Id: mklivecd.in,v 1.114 2004/08/20 18:24:44 tom_kelly33 Exp $
 #
 
 use strict;
@@ -630,7 +630,8 @@ sub create_initrd {
 	# copy modules
 	foreach my $mod (@allmods) {
 		my $modpath = $o_root."lib/modules/$o_kernel/kernel/$mod$modext";
-		$mod = get_exec("basename $mod");
+		#$mod = get_exec("basename $mod");
+		$mod =~ s,.*/,, ; ## basename and perl (file::basename)
 		my $tomod = "$dir/lib/modules/$o_kernel/kernel/$mod$modext";
 		if (-f $modpath) {
 			do_copy($modpath, 644, $tomod, ++$pos);
