Michael Filippov:patch2:default res 800x600, @def_monitors to $def_monitors

--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.114 2004/08/20 18:24:44 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.115 2004/09/15 14:28:10 tom_kelly33 Exp $
 #
 
 use strict;
@@ -671,6 +671,7 @@ sub create_initrd {
 	set_progress(++$pos, "find $dir | wc -l");
 
 	# do magic
+	print "\n DO MAGIC \n";
 	my $initrd = "$workdir/livecd/isolinux/initrd";
 	my $mnt = "$workdir/initrd.mnt";
 	do_cmd("mkdir -p $workdir/livecd/isolinux",                         ++$pos);
@@ -683,10 +684,15 @@ sub create_initrd {
 	do_cmd("(cd $workdir/livecd/isolinux ; gzip -9 initrd)",            ++$pos);
 
 	# make splash
-	do_cmd("mv -f $initrd.gz $o_root/tmp ; \
-		chroot $o_root /usr/share/bootsplash/scripts/make-boot-splash /tmp/initrd.gz $o_resolution; \
-		mv -f $o_root/tmp/initrd.gz $workdir/livecd/isolinux", ++$pos) if ($o_splash =~ m/yes/);
-
+	print "\n Make Splash \n";
+	#do_cmd("mv -f $initrd.gz $o_root/tmp ; \
+	#	chroot $o_root /usr/share/bootsplash/scripts/make-boot-splash /tmp/initrd.gz $o_resolution; \
+	#	mv -f $o_root/tmp/initrd.gz $workdir/livecd/isolinux", ++$pos) if ($o_splash =~ m/yes/);
+	if ($o_splash =~ m/yes/) {
+		do_cmd("mv -f $initrd.gz $o_root/tmp", ++$pos);
+		do_cmd("chroot $o_root /usr/share/bootsplash/scripts/make-boot-splash /tmp/initrd.gz $o_resolution", ++$pos);
+		do_cmd("mv -f $o_root/tmp/initrd.gz $workdir/livecd/isolinux", ++pos);
+	}
 	# we are done
 	end_progress();
 }
