--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.131 2004/09/14 20:26:00 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.132 2004/09/15 14:28:10 tom_kelly33 Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -653,7 +653,7 @@ sub hwdetect_getxfree {
 	my $def_mouse = hwdetect_getmouse();
 	my $def_card = hwdetect_getvideo();
 	my $rawX = Xconfig::default::configure($def_keyboard, $def_mouse);
-	my @def_monitors = hwdetect_getmonitors($rawX);
+	my $def_monitors = hwdetect_getmonitors($rawX);
 
 	# fix the de(nodeadkeys) keyboard
 	my $xkb = $rawX->get_keyboard();
@@ -670,7 +670,7 @@ sub hwdetect_getxfree {
 	# detect a resolution
 	print getStr('resolution_probe').": ";
 	my %old_X;
-	$old_X->{default_depth} = defined($cmdline{'xbpp'}) ?  $cmdline{'xbpp'} : 16;
+	$old_X->{default_depth} = defined($cmdline{'xbpp'}) ? $cmdline{'xbpp'} : 16;
 	my $resolution_wanted = undef;
 	if (defined($cmdline{'xres'})) {
 		$resolution_wanted->{Depth} = $old_X->{default_depth};
@@ -687,12 +687,12 @@ sub hwdetect_getxfree {
 		eval { $resolution = $rawX->get_resolution; };
 	}
 
-	# try to make sure we have at least a valid 1024x768 before finally setting it
+	# try to make sure we have at least a valid 800x600 before finally setting it
 	if (!defined($resolution) ||
 	    !defined($resolution->{X}) || !defined($resolution->{Y}) || !defined($resolution->{Depth}) ||
-	    (($resolution->{X} < 1024) && !defined($cmdline{'xres'}) && !defined($cmdline{'xbpp'}))) {
-		$resolution->{X} = 1024;
-		$resolution->{Y} = 768;
+	    (($resolution->{X} < 800) && !defined($cmdline{'xres'}) && !defined($cmdline{'xbpp'}))) {
+		$resolution->{X} = 800;
+		$resolution->{Y} = 600;
 		$resolution->{Depth} = 16;
 	}
 	eval { $rawX->set_resolution($resolution); };
